@@ -34,6 +34,7 @@ public class GameTest {
         this.board = new Board();
         this.deck = Deck.getInstance();
         this.game = Game.getInstance();
+        this.game.addPlayerToLobby(player.getUsername());
         this.game.addPlayer(player);
     }
 
@@ -95,7 +96,7 @@ public class GameTest {
     @Test
     public void setInitialCardForAllPlayers(){
         game.setInitialCardForAllPlayers();
-        for(Player p :players){
+        for(Player p : game.getPlayers()){
             assertNotNull(p.getBoard().getInitialCard());
         }
     }
@@ -112,16 +113,16 @@ public class GameTest {
     public void getCommonObjectives(){
         assertNotNull(game.getCommonObjectives());
     }
-    //TODO fix it, it doesn't set the secret objective to the player
+
+
     @Test
     public void setSecretObjectives(){
-        Player player1 = new Player("test1");
-        ObjectiveCard card1 = deck.getObjectiveCards().get(0);
+        ObjectiveCard card1 = deck.getObjectiveCards().getFirst();
         ObjectiveCard card2 = deck.getObjectiveCards().get(1);
         game.setSecretObjectives("test", 0);
-        game.setSecretObjectives("test1", 0);
         assertEquals(card1,player.getBoard().getSecretObjective());
-        assertEquals(card2,player1.getBoard().getSecretObjective());
+        game.setSecretObjectives("test", 0); //to zero because first card was removed before by the same method
+        assertEquals(card2,player.getBoard().getSecretObjective());
     }
 
     @Test
